--- a/token site/token site/index.html
+++ b/token site/token site/index.html
@@ -31,13 +31,13 @@
                     <div class="collection__block flex  flex-col items-center text-center md:w-1/3 w-full mx-10 md:mt-0 mt-4">
                         <h3 class="mb-3 italic text-4xl font-sans text-[#494d5d]">Collection 2</h3>
                         <div class="bg-[#ededed]  rounded-2xl min-w-full md:min-h-[89%] flex justify-center items-center py-32">
-                           <p>Comming soon</p>
+                           <p>Coming soon</p>
                         </div>
                     </div>
                     <div class="collection__block flex  flex-col items-center text-center md:w-1/3 w-full md:mt-0 mt-4">
                         <h3 class="mb-3 italic text-4xl font-sans text-[#494d5d]">Collection 3</h3>
                         <div class="bg-[#ededed]  rounded-2xl min-w-full md:min-h-[89%] flex justify-center items-center py-32">
-                           <p>Comming soon</p>
+                           <p>Coming soon</p>
                         </div>
                     </div>
                 </div>
